vs prefers this?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,2 +1,3 @@
-﻿add_library(PicoSHA2 STATIC "picosha2.h")
+﻿add_library(PicoSHA2 STATIC "picosha2.h" "picosha2.cpp")
+
 set_target_properties(PicoSHA2 PROPERTIES LINKER_LANGUAGE CXX)
